Fix cropped descenders in station name by increasing line-height

--- a/client/style.css
+++ b/client/style.css
@@ -141,7 +141,7 @@ body {
   font-family: 'Source Code Pro', monospace;
   font-weight: 400;
   font-size: 32px;
-  line-height: 24px;
+  line-height: 1.2;
   color: #F2FFC5;
   margin: 0;
   white-space: nowrap;
